--- a/ui_files/addtarget.ui
+++ b/ui_files/addtarget.ui
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>cohort_settings</class>
- <widget class="QDialog" name="cohort_settings">
+ <class>Ui_add_target</class>
+ <widget class="QDialog" name="Ui_add_target">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>605</width>
-    <height>369</height>
+    <width>375</width>
+    <height>401</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Cohort Subgrouping</string>
+   <string>Add Target</string>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>581</width>
-     <height>351</height>
+     <width>354</width>
+     <height>381</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="9" column="3">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
       <item row="6" column="0" colspan="6">
        <widget class="Line" name="line">
         <property name="orientation">
@@ -45,6 +58,13 @@
         </property>
        </widget>
       </item>
+      <item row="10" column="2" colspan="3">
+       <widget class="QLineEdit" name="threshold_value">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
       <item row="10" column="0" colspan="2">
        <widget class="QLabel" name="threshold_label">
         <property name="enabled">
@@ -52,6 +72,13 @@
         </property>
         <property name="text">
          <string>threshold:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="12" column="5">
+       <widget class="QPushButton" name="cancel_button">
+        <property name="text">
+         <string>Cancel</string>
         </property>
        </widget>
       </item>
@@ -89,10 +116,23 @@
         </property>
        </widget>
       </item>
-      <item row="10" column="2">
-       <widget class="QLineEdit" name="threshold_value">
-        <property name="enabled">
-         <bool>false</bool>
+      <item row="7" column="5">
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="12" column="4">
+       <widget class="QPushButton" name="save_button">
+        <property name="text">
+         <string>Save</string>
         </property>
        </widget>
       </item>
@@ -113,47 +153,17 @@
         </property>
        </widget>
       </item>
-      <item row="9" column="3">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+      <item row="11" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>new target name:</string>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
+       </widget>
       </item>
-      <item row="7" column="5">
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
+      <item row="11" column="2" colspan="3">
+       <widget class="QLineEdit" name="newname"/>
       </item>
      </layout>
-    </item>
-    <item>
-     <widget class="QPushButton" name="save_button">
-      <property name="text">
-       <string>Save</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="cancel_button">
-      <property name="text">
-       <string>Cancel</string>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
