--- a/ui_files/form.ui
+++ b/ui_files/form.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Deep Histology v1.0</string>
+   <string>Deep Histology v2.0</string>
   </property>
   <property name="iconSize">
    <size>
@@ -66,7 +66,7 @@
             </property>
            </widget>
           </item>
-          <item row="13" column="3" colspan="2">
+          <item row="13" column="4" colspan="2">
            <widget class="QPushButton" name="addcohortlist_learn">
             <property name="cursor">
              <cursorShape>PointingHandCursor</cursorShape>
@@ -80,7 +80,7 @@
             </property>
            </widget>
           </item>
-          <item row="6" column="5">
+          <item row="6" column="6">
            <widget class="QLabel" name="label_4">
             <property name="enabled">
              <bool>true</bool>
@@ -90,14 +90,14 @@
             </property>
            </widget>
           </item>
-          <item row="11" column="6">
+          <item row="11" column="7">
            <widget class="QLabel" name="label_28">
             <property name="text">
              <string>cohort list:</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="6">
+          <item row="6" column="7">
            <widget class="QSpinBox" name="validratio_learn">
             <property name="cursor">
              <cursorShape>PointingHandCursor</cursorShape>
@@ -130,10 +130,20 @@
             </property>
            </widget>
           </item>
-          <item row="9" column="0" rowspan="2" colspan="7">
+          <item row="9" column="0" rowspan="2" colspan="8">
            <widget class="Line" name="line">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="20" column="3">
+           <widget class="QPushButton" name="add_target_learn">
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
+            <property name="text">
+             <string>add target</string>
             </property>
            </widget>
           </item>
@@ -163,7 +173,7 @@
             </property>
            </widget>
           </item>
-          <item row="13" column="5">
+          <item row="13" column="6">
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -206,7 +216,7 @@
             </property>
            </widget>
           </item>
-          <item row="25" column="6">
+          <item row="25" column="7">
            <widget class="QPushButton" name="advanced_sets_learn">
             <property name="cursor">
              <cursorShape>PointingHandCursor</cursorShape>
@@ -216,7 +226,7 @@
             </property>
            </widget>
           </item>
-          <item row="8" column="6">
+          <item row="8" column="7">
            <widget class="QSpinBox" name="kfolds_learn">
             <property name="enabled">
              <bool>false</bool>
@@ -229,7 +239,7 @@
             </property>
            </widget>
           </item>
-          <item row="13" column="2">
+          <item row="13" column="3">
            <spacer name="horizontalSpacer_7">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -276,7 +286,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="0" colspan="7">
+          <item row="4" column="0" colspan="8">
            <widget class="Line" name="line_3">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -310,7 +320,7 @@
             </property>
            </widget>
           </item>
-          <item row="12" column="6" rowspan="3">
+          <item row="12" column="7" rowspan="3">
            <widget class="QListWidget" name="cohortlist_learn">
             <property name="editTriggers">
              <set>QAbstractItemView::AllEditTriggers</set>
@@ -327,14 +337,14 @@
             </property>
            </widget>
           </item>
-          <item row="17" column="0" colspan="7">
+          <item row="17" column="0" colspan="8">
            <widget class="Line" name="line_2">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
            </widget>
           </item>
-          <item row="14" column="3" colspan="2">
+          <item row="14" column="4" colspan="2">
            <widget class="QPushButton" name="del_list_learn">
             <property name="cursor">
              <cursorShape>PointingHandCursor</cursorShape>
@@ -354,7 +364,7 @@
             </property>
            </widget>
           </item>
-          <item row="19" column="2">
+          <item row="19" column="3">
            <widget class="QPushButton" name="cohort_click_learn">
             <property name="cursor">
              <cursorShape>PointingHandCursor</cursorShape>
@@ -371,7 +381,7 @@
             </property>
            </widget>
           </item>
-          <item row="23" column="6">
+          <item row="23" column="7">
            <widget class="QPushButton" name="test_learn">
             <property name="cursor">
              <cursorShape>PointingHandCursor</cursorShape>
@@ -408,7 +418,7 @@
             </property>
            </widget>
           </item>
-          <item row="8" column="5">
+          <item row="8" column="6">
            <widget class="QLabel" name="label_5">
             <property name="enabled">
              <bool>false</bool>
@@ -418,13 +428,17 @@
             </property>
            </widget>
           </item>
-          <item row="20" column="2">
-           <widget class="QPushButton" name="add_target_learn">
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
+          <item row="19" column="2">
+           <widget class="QCheckBox" name="checkSubset">
             <property name="text">
-             <string>add target</string>
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="20" column="2">
+           <widget class="QCheckBox" name="checkTarget">
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
@@ -728,16 +742,6 @@
            <widget class="Line" name="line_4">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="13" column="2">
-           <widget class="QPushButton" name="subgroups_deploy">
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="text">
-             <string>subgroups</string>
             </property>
            </widget>
           </item>
