--- a/ui_files/addtarget.ui
+++ b/ui_files/addtarget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Ui_add_target</class>
- <widget class="QDialog" name="Ui_add_target">
+ <widget class="QDialog" name="add_target">
   <property name="geometry">
    <rect>
     <x>0</x>
